package iuh.state;



public interface OrderState {

    void handle();

}
